build/log/idf_py_stdout_output_45536
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\MyCode\esp32\esp32e_code\zproj_SmartWatch\build\bootloader\esp-idf\esptool_py && d:\Environment_file\esp32\.espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe D:/Environment_file/esp32/v5.2.3/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/MyCode/esp32/esp32e_code/zproj_SmartWatch/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/9] Building C object esp-idf/ui/CMakeFiles/__idf_ui.dir/pages/setting_page.c.obj
FAILED: esp-idf/ui/CMakeFiles/__idf_ui.dir/pages/setting_page.c.obj 
ccache D:\Environment_file\esp32\.espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.3-dirty\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/MyCode/esp32/esp32e_code/zproj_SmartWatch/build/config -ID:/MyCode/esp32/esp32e_code/zproj_SmartWatch/components/ui -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/newlib/platform_include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/freertos/config/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/freertos/config/include/freertos -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/freertos/config/xtensa/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/freertos/FreeRTOS-Kernel/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/freertos/esp_additions/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_hw_support/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_hw_support/include/soc -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_hw_support/include/soc/esp32 -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_hw_support/port/esp32/. -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/heap/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/log/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/soc/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/soc/esp32 -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/soc/esp32/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/hal/platform_port/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/hal/esp32/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/hal/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_rom/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_rom/include/esp32 -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_rom/esp32 -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_common/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_system/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_system/port/soc -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_system/port/include/private -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/xtensa/esp32/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/xtensa/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/xtensa/deprecated_include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/lwip/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/lwip/include/apps -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/lwip/include/apps/sntp -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/lwip/lwip/src/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/lwip/port/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/lwip/port/freertos/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/lwip/port/esp32xx/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/lwip/port/esp32xx/include/arch -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/lwip/port/esp32xx/include/sys -ID:/MyCode/esp32/esp32e_code/zproj_SmartWatch/components/lvgl -ID:/MyCode/esp32/esp32e_code/zproj_SmartWatch/components/lvgl/src -ID:/MyCode/esp32/esp32e_code/zproj_SmartWatch/components -ID:/MyCode/esp32/esp32e_code/zproj_SmartWatch/components/lvgl/examples -ID:/MyCode/esp32/esp32e_code/zproj_SmartWatch/components/lvgl/demos -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_timer/include -ID:/MyCode/esp32/esp32e_code/zproj_SmartWatch/components/bsp -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/json/cJSON -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_partition/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/deprecated -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/analog_comparator/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/dac/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/gpio/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/gptimer/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/i2c/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/i2s/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/ledc/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/mcpwm/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/parlio/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/pcnt/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/rmt/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/sdio_slave/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/sdmmc/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/sigma_delta/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/spi/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/temperature_sensor/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/touch_sensor/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/twai/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/uart/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/usb_serial_jtag/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/driver/touch_sensor/esp32/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_pm/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_ringbuf/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_lcd/include -ID:/Environment_file/esp32/v5.2.3/esp-idf/components/esp_lcd/interface -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/MyCode/esp32/esp32e_code/zproj_SmartWatch=. -fmacro-prefix-map=D:/Environment_file/esp32/v5.2.3/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/ui/CMakeFiles/__idf_ui.dir/pages/setting_page.c.obj -MF esp-idf\ui\CMakeFiles\__idf_ui.dir\pages\setting_page.c.obj.d -o esp-idf/ui/CMakeFiles/__idf_ui.dir/pages/setting_page.c.obj -c D:/MyCode/esp32/esp32e_code/zproj_SmartWatch/components/ui/pages/setting_page.c
In file included from D:/MyCode/esp32/esp32e_code/zproj_SmartWatch/components/ui/pages/setting_page.c:4:
D:/MyCode/esp32/esp32e_code/zproj_SmartWatch/components/bsp/incl/screen_ledc.h:6:1: error: unknown type name 'esp_err_t'
    6 | esp_err_t set_blight_duty_cycle(int duty_percentage);
      | ^~~~~~~~~
D:/MyCode/esp32/esp32e_code/zproj_SmartWatch/components/ui/pages/setting_page.c:6:20: warning: 'TAG' defined but not used [-Wunused-variable]
    6 | static const char* TAG = "settingPage";
      |                    ^~~
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
ninja: build stopped: subcommand failed.
